add more unit tests